--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -165,6 +165,11 @@ allprojects {
 }
 
 dependencies {
+    // 如果你需要支持GIF动图
+    implementation 'com.facebook.fresco:animated-gif:1.9.0'
+    // 如果你需要支持WebP格式，包括WebP动图
+    implementation 'com.facebook.fresco:animated-webp:1.9.0'
+    implementation 'com.facebook.fresco:webpsupport:1.9.0'
     implementation project(':react-native-wechat')
     implementation project(':react-native-baidu-map')
     implementation project(':react-native-svg')
